--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,15 @@
 ##spring.application.name=BootMongo
 ##server.context-path=/userP (Tomcat) port
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://wtw.cwjwgbozkgd1.us-east-1.rds.amazonaws.com:3306/prueba
-#spring.datasource.username=admin
-#spring.datasource.password=admin_admin
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://wtw.cwjwgbozkgd1.us-east-1.rds.amazonaws.com:3306/Prueba
+spring.datasource.username=admin
+spring.datasource.password=admin_admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/prueba
+#spring.datasource.username=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
